# faust-gen

./: .error-rules.txt  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build.gradle  check-facs.py  convert.sh  get_testimonies.py  gradle.properties  init.gradle.kts  package-lock.json  package.json  pom.xml  render-multi-pages.js  rendersvgs-puppeteer.js  rendersvgs.js  settings.gradle
buildSrc/src/main/groovy/: CopyWithSymlink.groovy
src/main/assembly/: exist-app.xml
src/main/preprint-web/css/: document-transcript.css
src/main/profile/: prefs.js
src/main/resources/: log4j2.xml  postprocess-svgs.xsl
src/main/xproc-config/: config.xml  paths.xml
svg_rendering/: settings.json
svg_rendering/page/: .htaccess  css  debug.html  debug2.html  fonts  img  json  transcript-debug.html  transcript-generation.html  webfonts
svg_rendering/page/css/: basic_layout.css  document-transcript.css  pure-custom.css
svg_rendering/page/js/: transcript-generation.js
svg_rendering/page/js-gen/: README.md  Y_extract.js  adhoc-tree.js  faust.js  loadwebfonts.js  materialunit.js  svg-utils.js  text-annotation.js  text-index.js  transcript-adhoc-tree.js  transcript-configuration-faust.js  transcript-generation.js  transcript-svg.js  transcript.js
utils/: README.md  add-gsa-numbers.py  collect_chars.py  detect_pages.py  find-download-image.py  pyproject.toml  table2xml.py  verse_stats.py  visualize-task-deps.py  watermark_image_table.py
